--- a/templates/_formhelpers.html
+++ b/templates/_formhelpers.html
@@ -27,7 +27,7 @@
 
 {% macro render_label(field, tooltip, text, visible) %}
     {% if tooltip and text %}
-        {% if visible == 'true' %}
+        {% if visible == 'false' %}
             {{ field.label(class="sr-only", style='width:148px', text=text) }}
         {% else %}
             {{ field.label(style='width:148px', text=text) }}
@@ -35,13 +35,25 @@
         <div style="float:left; padding-top:5px;margin-bottom:5px;font-size:18px;">
             &nbsp;<i rel="tooltip" data-title="{{tooltip|safe}}" class="glyphicon glyphicon-question-sign"></i></div>
         {% elif tooltip and not text %}
-        {{ field.label(class="sr-only", style='width:148px') }}
+        {% if visible == 'false' %}
+            {{ field.label(class="sr-only", style='width:148px') }}
+        {% else %}
+            {{ field.label(style='width:148px') }}
+        {% endif %}
         <div style="float:left; padding-top:5px;margin-bottom:5px;font-size:18px;">
             &nbsp;<i rel="tooltip" data-title="{{tooltip|safe}}" class="glyphicon glyphicon-question-sign"></i></div>
     {% elif not tooltip and text %}
-        {{ field.label(class="sr-only", text=text) }}
+        {% if visible == 'false' %}
+            {{ field.label(class="sr-only", text=text) }}
+        {% else %}
+            {{ field.label(text=text) }}
+        {% endif %}
     {% else %}
-        {{ field.label(class="sr-only") }}
+        {% if visible == 'false' %}
+            {{ field.label(class="sr-only") }}
+        {% else %}
+            {{ field.label() }}
+        {% endif %}
     {% endif %}
 {% endmacro %}
 
