Redundant JS removed - CSS updated instead

--- a/templates/account/update.html
+++ b/templates/account/update.html
@@ -44,7 +44,7 @@
                             {{ upload_form.x2 }}
                             {{ upload_form.y2 }}
                             <div id="modal" class="modal fade">
-                                <div class="modal-dialog img-dialog">
+                                <div class="modal-dialog img-dialog img-circle">
                                     <div class="modal-content">
                                         <div class="modal-body">
                                             <img id="uploadPreview">
