--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -241,7 +241,7 @@ ul.polaroids .polaroid li:nth-child(8n) a{position:relative;top:8px;right:5px}
 ul.polaroids .polaroid li:nth-child(11n) a{position:relative;top:3px;left:-5px}
 ul.polaroids .polaroid img{max-width:120px;max-height:120px;margin-bottom:10px;border:1px solid #DDD}
 img.grey-border{border:1px solid #DDD}
-.jcrop-holder div{-webkit-border-radius:50%!important;-moz-border-radius:50%!important;border-radius:50%!important}
+.img-circle.jcrop-holder div{-webkit-border-radius:50%!important;-moz-border-radius:50%!important;border-radius:50%!important}
 .jcrop-keymgr{display:none!important}
 .jcrop-holder{display:block;margin-right:auto;margin-left:auto}
 .loading-overlay{position:fixed;top:0;left:0;background:rgba(0,0,0,0.6);z-index:105;width:100%;height:100%;display:none}
