--- a/templates/applications/update.html
+++ b/templates/applications/update.html
@@ -27,7 +27,7 @@
                                 </div>
                             </div>
                         </div>
-                      {{ form_helper.render_field(upload_form.avatar, onchange="loadPreviewSquare()", class="form-control hidden") }}
+                      {{ form_helper.render_field(upload_form.avatar, onchange="loadPreview()", class="form-control hidden") }}
                       {{ upload_form.x1 }}
                       {{ upload_form.y1 }}
                       {{ upload_form.x2 }}
