--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -22,6 +22,7 @@ a[rel="popover"]{cursor:pointer}
 .label-success{background-color:#398439}
 .label-danger{background-color:#BA0000}
 .label-default{background-color:#ADADAD}
+.visible-form input[type="checkbox"]{margin-top:1px}
 input[type="checkbox"]{-webkit-appearance:checkbox;height: auto;width:auto;margin-top:19px}
 input:focus,textarea:focus,textarea:focus,input[type="text"]:focus,input[type="password"]:focus,input[type="datetime"]:focus,input[type="datetime-local"]:focus,input[type="date"]:focus,input[type="month"]:focus,input[type="time"]:focus,input[type="week"]:focus,input[type="number"]:focus,input[type="email"]:focus,input[type="url"]:focus,input[type="search"]:focus,input[type="tel"]:focus,input[type="color"]:focus,.uneditable-input:focus{-webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(139,191,54,0.6);-moz-box-shadow:inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(139,191,54,0.6);box-shadow:inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(139,191,54,0.6)}
 .inline-radio li{display:inline-block;padding-right:20px}
