--- a/templates/applications/update.html
+++ b/templates/applications/update.html
@@ -58,7 +58,7 @@
                 {{ form_helper.render_field(form.name, class="form-control", placeholder=_('Name'), visible='true') }}
                 {{ form_helper.render_field(form.short_name, class="form-control", placeholder=_('Short name or slug for the project'), visible='true', label_text=_('Project slug:')) }}
                 {{ form_helper.render_field(form.description, class="form-control", placeholder=_('Short description'), visible='true') }}
-                {{ form_helper.render_field(form.long_description, class="form-control height-300", placeholder=_('Long description'), visible='true') }}
+                {{ form_helper.render_field(form.long_description, class="form-control", rows="18", placeholder=_('Long description'), visible='true') }}
                 {{ form_helper.render_field(form.category_id, class="form-control", visible='true') }}
                 {{ form_helper.render_field(form.allow_anonymous_contributors, class="form-control", visible='true') }}
                 {{ form_helper.render_field(form.password, class="form-control", visible='true') }}
