Hover effect for front page images

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -62,7 +62,7 @@
              <br/>
              <strong>{{_('Answers')}}:</strong> {{user.task_runs}}
              " rel="popover" data-original-title="<strong>{{user.name}}</strong>">
-             <div class="shadow shadow-circle">
+             <div class="shadow img-circle shadow-circle">
           {{ account_helper.render_user_thumbnail(user, upload_method, style="height:90px; width:90px;", class="img-circle") }}
              </div>
           </a>
