--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -22,8 +22,8 @@ a[rel="popover"]{cursor:pointer}
 .label-success{background-color:#398439}
 .label-danger{background-color:#BA0000}
 .label-default{background-color:#ADADAD}
-.visible-form input[type="checkbox"]{margin-top:1px}
 input[type="checkbox"]{-webkit-appearance:checkbox;height: auto;width:auto;margin-top:19px}
+.visible-form input[type="checkbox"]{margin-top:1px}
 input:focus,textarea:focus,textarea:focus,input[type="text"]:focus,input[type="password"]:focus,input[type="datetime"]:focus,input[type="datetime-local"]:focus,input[type="date"]:focus,input[type="month"]:focus,input[type="time"]:focus,input[type="week"]:focus,input[type="number"]:focus,input[type="email"]:focus,input[type="url"]:focus,input[type="search"]:focus,input[type="tel"]:focus,input[type="color"]:focus,.uneditable-input:focus{-webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(139,191,54,0.6);-moz-box-shadow:inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(139,191,54,0.6);box-shadow:inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(139,191,54,0.6)}
 .inline-radio li{display:inline-block;padding-right:20px}
 textarea{resize:none}
@@ -253,8 +253,9 @@ img.grey-border{border:1px solid #DDD}
 .shadow.shadow-inline{display:inline-block;position:relative}
 .shadow{display:block;position:relative}
 .shadow img{display:block}
+.img-circle.shadow-circle:hover{-moz-box-shadow: 0 1px 12px 1px rgba(200,0,0,.5);-webkit-box-shadow: 0 1px 12px 1px rgba(200,0,0,.5);box-shadow: 0 1px 12px 1px rgba(200,0,0,.5);}
 .shadow::before{display:block;content:'';position:absolute;width:100%;height:100%;-moz-box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);-webkit-box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2)}
-.shadow-circle{border-top:1px solid #ECEDED;border-radius:50%}
+.shadow-circle{border-top:1px solid #ECEDED;border-radius:50%;transition:box-shadow 1s;-webkit-transition:box-shadow 1s;-moz-transition:box-shadow 1s;-ms-transition:box-shadow 1s;-o-transition:box-shadow 1s}
 .shadow-circle::before{border-radius:50%}
 .nav-stacked.inset-shadow{-moz-box-shadow:inset 0 1px 2px 1px rgba(0,0,0,0.1);-webkit-box-shadow:inset 0 1px 2px 1px rgba(0,0,0,0.1);box-shadow:inset 0 1px 2px 1px rgba(0,0,0,0.1);border:1px solid rgba(145,145,145,0.5)}
 .inset-shadow{-moz-box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);-webkit-box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);border:1px solid rgba(223,223,223,0.5)}
