--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -253,9 +253,9 @@ img.grey-border{border:1px solid #DDD}
 .shadow.shadow-inline{display:inline-block;position:relative}
 .shadow{display:block;position:relative}
 .shadow img{display:block}
-.img-circle.shadow-circle:hover{-moz-box-shadow: 0 1px 12px 1px rgba(200,0,0,.5);-webkit-box-shadow: 0 1px 12px 1px rgba(200,0,0,.5);box-shadow: 0 1px 12px 1px rgba(200,0,0,.5);}
+.img-circle.shadow-circle:hover{-moz-box-shadow:0px 1px 10px -2px rgba(186, 0, 0, 1);-webkit-box-shadow:0px 1px 10px -2px rgba(186, 0, 0, 1);box-shadow:0px 1px 10px -2px rgba(186, 0, 0, 1)}
 .shadow::before{display:block;content:'';position:absolute;width:100%;height:100%;-moz-box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);-webkit-box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2)}
-.shadow-circle{border-top:1px solid #ECEDED;border-radius:50%;transition:box-shadow 1s;-webkit-transition:box-shadow 1s;-moz-transition:box-shadow 1s;-ms-transition:box-shadow 1s;-o-transition:box-shadow 1s}
+.shadow-circle{border-top:1px solid #ECEDED;border-radius:50%;transition:box-shadow .5s;-webkit-transition:box-shadow .5s;-moz-transition:box-shadow .5s;-ms-transition:box-shadow .5s;-o-transition:box-shadow .5s}
 .shadow-circle::before{border-radius:50%}
 .nav-stacked.inset-shadow{-moz-box-shadow:inset 0 1px 2px 1px rgba(0,0,0,0.1);-webkit-box-shadow:inset 0 1px 2px 1px rgba(0,0,0,0.1);box-shadow:inset 0 1px 2px 1px rgba(0,0,0,0.1);border:1px solid rgba(145,145,145,0.5)}
 .inset-shadow{-moz-box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);-webkit-box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);box-shadow:inset 0 0 3px 1px rgba(0,0,0,0.2);border:1px solid rgba(223,223,223,0.5)}
